fix logo spacing, maybe

--- a/index.css
+++ b/index.css
@@ -64,6 +64,7 @@ footer {
 }
 .showcase-container {
     padding-top: 10%;
+    width:100%;
 }
 
 @media (orientation: landscape) {
@@ -77,7 +78,7 @@ footer {
     .home-image {
         height: 225px;
         width: 225px;
-        padding-left: 30%;
+        padding-left: 25%;
     }
     h1 {
         font-size: 70px;
